[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Daniel Horton <daniel.horton@northstar-data.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
polars = "^0.19.19"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
